--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,25 +1,24 @@
-// %AnPro-Regular {
-//   font-family: 'AnonymousPro-Regular', sans-serif;
-//   font-weight: normal;
-//   display: swap;
-// }
+%Mont-Medium {
+  font-family: 'Montserrat-Medium', sans-serif;
+  font-weight: 500;
+  display: swap;
+}
 
-// %AnPro-Bold {
-//   font-family: 'AnonymousPro-Bold', sans-serif;
-//   font-weight: 700
-// }
+%Mont-Regular {
+  font-family: 'Montserrat-Regular', sans-serif;
+  font-weight: 400;
+  display: swap;
+}
 
-// %AlGrey-Bold {
-//   font-family: 'AlegreyaSC-Bold', sans-serif;
-//   font-weight: 700;
-// }
+%Forum-Regular {
+  font-family: 'Forum-Regular', sans-serif;
+  font-weight: 400;
+  display: swap;
+}
 
-// %AlGrey-Regular {
-//   font-family: 'AlegreyaSC-Regular', sans-serif;
-//   font-weight: normal;
-// }
 
-// $blue: #ABD0D3;
-// $text: #F2F1ED;
-// $background: #3B3B3B;
-// $line: #BCB3A9;
+$white: #FFFFFF;
+$blue: #F1FCFF;
+$neon-blue: #00E0FF;
+$dark-blue: #002D42;
+$black: #00202E;
