--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,92 @@
 @import 'fonts';
 
 // start header
+.header {
+  padding: 30px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: rgba(0, 32, 46, 0.9);
+}
+
+.header__line {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__social {
+  margin-right: 50px;
+}
+
+.header__btn {
+  display: inline-block;
+  margin-bottom: 50px;
+
+  &+.header__btn {
+    margin-left: 44px;
+  }
+}
+
+.header__phone {
+  margin-right: 30px;
+}
+
 
 // end header
 
+
+// start section screen
+
+.screen {
+  background-image: url('../images/content/header-bg1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  position: relative;
+}
+
+.screen__bg {
+  // margin-top: 104px;
+  background-color: rgba(0, 32, 46, 0.7);
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.screen__box {
+  width: fit-content;
+  // margin-left: 70px;
+  margin-top: 195px;
+}
+
+.screen__title {
+  text-transform: uppercase;
+  font-size: 80px;
+  line-height: 90px;
+  margin-bottom: 40px;
+  letter-spacing: 5px;
+}
+
+.screen__subtitle {
+  padding-top: 15px;
+  font-size: 48px;
+  line-height: 53px;
+  @extend %Forum-Regular;
+  letter-spacing: 5px;
+}
+
+
+
+
+// end section screen
 @import 'media';
