--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -36,6 +36,19 @@ body {
   max-width: 100%;
   padding: 0 162px;
 }
+.section{
+  padding: 130px 0 70px; 
+  position: relative;
+}
+.global__section-line {
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(90deg, rgba(0, 45, 66, 0) 0%, #03547A 32.81%, rgba(241, 252, 255, 0.77) 48.96%, #024B6D 65.1%, rgba(0, 45, 66, 0) 100%);
+}
 
 .title {
   @extend %Forum-Regular;
@@ -45,32 +58,10 @@ body {
   margin: 0 auto;
   margin-bottom: 50px;
   max-width: fit-content;
+  letter-spacing: 3px;
 }
 
-.logo {
-  font-size: 20px;
-  line-height: 20px;
-  @extend %Mont-Regular;
-  color: $white;
-  width: 140px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  &__img {
-    width: 47px;
-    height: 41px;
-  }
-}
-
-.logo__company-name {
-  span {
-    font-size: 24px;
-    line-height: 24px;
-  }
-}
-
-
-
+// ДЛЯ КНОПОК
 .global-btn {
   @extend %Mont-Regular;
   padding: 8px;
@@ -86,6 +77,7 @@ body {
     5px 5px 10px 0px rgba(0, 0, 0, 0.3) inset,
     -5px -5px 10px 0px rgba(255, 255, 255, 0.2) inset;
   transition: all .3s;
+
   &:hover {
     border: 1px solid $neon-blue;
     box-shadow: -1px -1px 15px 0px #00E0FF,
@@ -93,6 +85,7 @@ body {
       5px 5px 10px 0px rgba(0, 0, 0, 0.3) inset,
       -5px -5px 10px 0px rgba(255, 255, 255, 0.2) inset;
     color: $neon-blue;
+
     svg {
       path {
         stroke: $neon-blue;
@@ -114,11 +107,9 @@ body {
   }
 
 }
-
 .main-btn {
   border: 1px solid $neon-blue;
 }
-
 .global__btn-contact {
   font-size: 16px;
   line-height: 25px;
@@ -127,8 +118,36 @@ body {
   text-transform: uppercase;
   cursor: pointer;
 }
+.global__inner-btn {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+// ДЛЯ КНОПОК
+// ЛОГОТИП
+.logo {
+  font-size: 20px;
+  line-height: 20px;
+  @extend %Mont-Regular;
+  color: $white;
+  width: 140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__img {
+    width: 47px;
+    height: 41px;
+  }
+}
 
-
+.logo__company-name {
+  span {
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
+// ЛОГОТИП
+// ВЫЕЗЖАЮЩЕЕ МЕНЮ
 .global__social-list {
   display: inline-block;
 
@@ -231,3 +250,8 @@ body {
     color: $neon-blue;
   }
 }
+// ВЫЕЗЖАЮЩЕЕ МЕНЮ
+
+
+
+
