--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -13,6 +13,32 @@
 }
 
 @media(max-width: 1024px) {
+  .title {
+    font-size: 24px;
+    line-height: 26px;
+  }
+
+  .text {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+
+  .global__btn-contact {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .menu.active {
+    width: 520px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .menu-mobil-services {
+    margin: 30px 0 30px 30px;
+  }
+
   .header__social {
     display: none;
   }
@@ -30,19 +56,19 @@
     letter-spacing: 0;
   }
 
-  .global__btn-contact {
-    font-size: 14px;
-    line-height: 17px;
+  .company__item-title {
+    font-size: 18px;
+    line-height: 20px;
+
+    span {
+      font-size: 64px;
+      line-height: 50px;
+    }
   }
 
-  .menu.active {
-    width: 520px;
-    font-size: 14px;
-    line-height: 17px;
-  }
-
-  .menu-mobil-services {
-    margin: 30px 0 30px 30px;
+  .company__item {
+    max-width: 224px;
+    margin-bottom: 50px;
   }
 }
 
@@ -59,10 +85,6 @@
 }
 
 @media(max-height: 800px) {
-  // .menu-mobil {
-  //   margin-bottom: 20px;
-  // }
-
   .menu__mobil-list {
     margin-bottom: 25px;
   }
@@ -76,6 +98,20 @@
   .screen__box {
     margin-left: 0;
   }
+
+  .company__inner {
+    flex-wrap: wrap;
+  }
+
+  .company__item {
+    max-width: 100%;
+  }
+
+
+
+
+
+
 }
 
 @media(max-height: 700px) {
@@ -167,7 +203,8 @@
   .screen__box {
     margin-top: 110px;
   }
-  .screen{
+
+  .screen {
     height: 450px;
   }
 }
