--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -90,38 +90,128 @@
 
 
 // start section company
-.company__inner{
+.company__inner {
   display: flex;
   justify-content: space-around
 }
-.company__item{
+
+.company__item {
   max-width: 295px;
   width: 100%;
   // width: 310px;
   // padding: 0 15px;
   margin-bottom: 70px;
 }
-.company__item-title{
+
+.company__item-title {
   @extend %Forum-Regular;
   text-transform: uppercase;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 30px;
-  span{
+
+  span {
     color: $neon-blue;
     font-size: 72px;
     line-height: 50px;
   }
 }
-.company__item-text{
+
+.company__item-text {
   text-align: left;
+}
+
+// end section company
+// start section spec
+.spec {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.spec__title {
+  padding: 0 15px;
+}
+
+.spec__text {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 162px;
+  margin-bottom: 50px;
+}
+
+.spec__item-title {
+  font-size: 24px;
+  line-height: 26px;
+  @extend %Forum-Regular;
+  text-align: left;
+  padding: 50px 15px 0 50px;
+  transition-duration: 1s,
+    1s;
+  text-transform: uppercase;
+  max-width: 320px;
+  width: 100%;
+
+  span {
+    padding-top: 10px;
+    font-size: 18px;
+    line-height: 22px;
+    display: block;
+    color: $white;
+    display: none;
+    @extend %Mont-Regular;
+
+  }
+}
+
+.spec__inner {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.spec__wrapper-item {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1024px;
+  width: 100%;
+}
+.spec__item {
+  max-width: 480px;
+  width: 100%;
+  height: 668px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  transition-duration: 3s, 1s;
+  transition: background-size 2s ease-in;
+  overflow: hidden;
+  background-size: 100% 100%;
+  &:hover {
+    background-size: 110% 110%;
+    .global-bg {
+      position: absolute;
+      background: linear-gradient(180deg, #00202E 0%, rgba(0, 32, 46, 0) 42.19%);
+      border: 2px solid #00E0FF;
+    }
+    .spec__item-title {
+      color: $neon-blue;
+      font-size: 32px;
+      line-height: 38px;
+      span {
+        display: block;
+        font-size: 14px;
+        line-height: 16px;
+        color: $white;
+      }
+    }
+  }
 }
 
 
 
 
-// end section company
-
+// end section spec
 
 
 
