--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,8 +8,8 @@ body {
   // position: relative;
   // overflow-x: hidden;
   margin: 0 auto;
-  // background-color: $dark-blue;
-  background-color: rgba(0, 32, 46, 1);
+  background-color: $dark-blue;
+  // background-color: rgba(0, 32, 46, 1);
 }
 
 .wrapper {
@@ -60,8 +60,14 @@ body {
   margin-bottom: 50px;
   max-width: fit-content;
   letter-spacing: 3px;
+  text-transform: uppercase;
 }
-
+.subtitle {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 162px;
+  margin-bottom: 50px;
+}
 // ФОН ДЛЯ ITEM
 .global-bg {
   background-color: rgba(0, 32, 46, 0.7);
