--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -132,12 +132,7 @@
   padding: 0 15px;
 }
 
-.spec__text {
-  max-width: 1920px;
-  margin: 0 auto;
-  padding: 0 162px;
-  margin-bottom: 50px;
-}
+
 
 .spec__item-title {
   font-size: 24px;
@@ -147,19 +142,14 @@
   padding: 50px 15px 0 50px;
   transition-duration: 1s,
     1s;
+  letter-spacing: 2px;
   text-transform: uppercase;
-  max-width: 320px;
+  max-width: 350px;
   width: 100%;
 
   span {
-    padding-top: 10px;
-    font-size: 18px;
-    line-height: 22px;
-    display: block;
-    color: $white;
     display: none;
     @extend %Mont-Regular;
-
   }
 }
 
@@ -175,6 +165,7 @@
   max-width: 1024px;
   width: 100%;
 }
+
 .spec__item {
   max-width: 480px;
   width: 100%;
@@ -187,17 +178,21 @@
   transition: background-size 2s ease-in;
   overflow: hidden;
   background-size: 100% 100%;
+
   &:hover {
     background-size: 110% 110%;
+
     .global-bg {
       position: absolute;
       background: linear-gradient(180deg, #00202E 0%, rgba(0, 32, 46, 0) 42.19%);
       border: 2px solid #00E0FF;
     }
+
     .spec__item-title {
       color: $neon-blue;
       font-size: 32px;
       line-height: 38px;
+
       span {
         display: block;
         font-size: 14px;
@@ -209,25 +204,26 @@
 }
 
 
-
-
 // end section spec
 
 // start section benefits
-.benefits__title{
+.benefits__title {
   margin-bottom: 70px;
 }
-.benefits__inner{
+
+.benefits__inner {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
-.benefits__item{
+
+.benefits__item {
   width: 430px;
   padding: 0 15px;
   margin-bottom: 100px;
 }
-.benefits__subtitle{
+
+.benefits__subtitle {
   @extend %Forum-Regular;
   color: $neon-blue;
   font-size: 24px;
@@ -237,11 +233,103 @@
   letter-spacing: 2px;
 }
 
-
-
-
 // end section benefits
+// start section projects
+.projects{
+  max-width: 1920px;
+  margin: 0 auto;
+}
+.projects__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  flex-wrap: wrap;
+}
 
+.projects__wrapper-item {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1920px;
+  width: 100%;
+}
+
+.projects__item {
+  max-width: 960px;
+  width: 100%;
+  height: 668px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  transition-duration: 3s,
+    1s;
+  transition: background-size 2s ease-in;
+  overflow: hidden;
+  background-size: 100% 100%;
+
+  &:hover {
+    background-size: 110% 110%;
+
+    .global-bg {
+      position: absolute;
+      background: linear-gradient(180deg, #00202E 0%, rgba(0, 32, 46, 0) 42.19%);
+      border: 2px solid #00E0FF;
+    }
+
+    .projects__item-title {
+      color: $neon-blue;
+      font-size: 32px;
+      line-height: 38px;
+
+      span {
+        display: block;
+        font-size: 14px;
+        line-height: 16px;
+        color: $white;
+      }
+    }
+
+    .projects__text-more {
+      display: none;
+    }
+  }
+}
+
+.projects__item-title {
+  font-size: 24px;
+  line-height: 26px;
+  @extend %Forum-Regular;
+  text-align: left;
+  letter-spacing: 2px;
+  padding: 50px 15px 0px 162px;
+  transition-duration: 1s,
+    1s;
+  text-transform: uppercase;
+  max-width: 712px;
+  width: 100%;
+
+  span {
+    display: none;
+    @extend %Mont-Regular;
+
+  }
+}
+
+.projects__text-more {
+  // margin-left: 162px;
+  padding: 30px 30px 0 162px;
+  max-width: 793px;
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+// end section projects
 
 
 
