--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -182,7 +182,8 @@
   }
 
   .spec__item-title,
-  .projects__item-title {
+  .projects__item-title,
+  .questions__item-title--text {
     font-size: 18px;
     line-height: 20px;
   }
@@ -195,6 +196,18 @@
         line-height: 30px;
       }
     }
+  }
+  .questions__item{
+    margin-bottom: 30px;
+  }
+  .questions__item-title{
+    padding-right: 10px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+  }
+  .questions__item-text {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -252,6 +265,7 @@
 }
 
 @media(max-width: 500px) {
+
   .header__phone {
     display: none;
   }
