--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -45,7 +45,6 @@
 // end header
 // start section screen
 .screen {
-  background-image: url('../images/content/header-bg1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -195,7 +194,6 @@
   }
 }
 
-
 // end section spec
 
 // start section benefits
@@ -332,24 +330,9 @@
 
 .questions__item {
   margin-bottom: 50px;
-  border-radius: 10px;
   color: $white;
   background: rgba(0, 45, 66, 0.8);
-  position: relative;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    bottom: -2px;
-    left: -2px;
-    right: -2px;
-    background: linear-gradient(180deg, rgba(241, 252, 255, 0.3),
-        rgba(0, 45, 66, 1));
-    border-radius: 10px;
-    z-index: -1;
-  }
 }
 
 .questions__item-title {
@@ -366,6 +349,7 @@
 
   &:hover {
     color: $neon-blue;
+
     .questions__item-title--img2 {
       display: block;
     }
@@ -382,14 +366,14 @@
   line-height: 22px;
   padding: 0 98px 20px 50px;
   display: none;
-  // min-height: 150px;
 }
 
 .questions__item-link {
   color: $neon-blue;
   border-bottom: 1px solid transparent;
-  &:hover{
-  border-bottom: 1px solid $neon-blue;
+
+  &:hover {
+    border-bottom: 1px solid $neon-blue;
   }
 }
 
@@ -412,27 +396,91 @@
 
 }
 
-
-
-
-
-
-
-
-
 // end section questions
 
+.reviews__slider{
+padding: 5px 0;
+}
+.reviews__item {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1244px;
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
+.reviews__item-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 45, 66, 0.7);
+  backdrop-filter: blur(10px);
+  padding: 70px;
+  display: flex;
+  justify-content: space-between;
+}
 
+.reviews__info,
+.reviews__img {
+  // width: 50%;
 
+}
 
+.reviews__img {
+  img {
+    width: 577px;
+    height: 350px;
+  }
+}
 
+.reviews__info {
+  padding-right: 50px;
+}
 
+.reviews__info-title {
+  display: flex;
+  justify-content: space-between;
+}
 
+.reviews__info-img {
+  margin-right: 40px;
+  width: 74px;
+  height: 75px;
+}
 
+.reviews__info-name {
+  max-width: 422px;
+  width: 100%;
+  text-align: left;
+  @extend %Forum-Regular;
+  color: $neon-blue;
+  font-size: 24px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
 
+.reviews__info-name--time {
+  color: $white;
+  font-size: 14px;
+  line-height: 17px;
+  @extend %Mont-Regular;
+}
 
+.reviews__info__wrapper {
+  padding-left: 115px;
 
+}
+
+.reviews__info-text {
+  margin-bottom: 50px;
+}
+
+.reviews__info-link {
+  font-size: 18px;
+  line-height: 22px;
+  color: $neon-blue;
+}
 
 
 @import 'media';
