--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -65,6 +65,19 @@
   .reviews__img {
     margin-left: 115px;
   }
+
+  .feedback__inner {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 0px;
+
+  }
+
+  .feedback__wrapper {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media(max-width: 1024px) {
@@ -178,19 +191,15 @@
   .reviews__img {
     margin-left: 0;
   }
+
 }
+
 
 @media(max-height: 900px) {
   .menu.active {
     padding-top: 50px;
   }
 }
-
-// @media(max-height: 900px) {
-//   .menu.active {
-//     padding-top: 50px;
-//   }
-// }
 
 @media(max-height: 800px) {
   .menu__mobil-list {
@@ -201,6 +210,7 @@
     margin: 30px 0 30px 30px;
   }
 }
+
 
 @media(max-width: 768px) {
   .screen__box {
@@ -266,6 +276,13 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+
+  .feedback__item {
+    &::placeholder {
+      font-size: 16px;
+      line-height: 18px;
+    }
+  }
 }
 
 @media(max-height: 700px) {
@@ -322,9 +339,20 @@
     display: none;
   }
 
-  .reviews__img {
-    height: 213px;
+  .feedback__input__wrapper {
+    width: 100%;
   }
+
+  .feedback__item {
+    width: 100%;
+  }
+
+  .feedback__item-text {
+    width: 100%;
+  }
+
+
+
 }
 
 @media(max-width: 500px) {
@@ -383,12 +411,37 @@
   .benefits__item {
     margin-bottom: 50px;
   }
-  .reviews__item-wrapper{
+
+  .reviews__item-wrapper {
     padding: 15px 20px;
   }
-  .reviews__img{
+
+  .reviews__img {
     display: none;
   }
+
+  .feedback__inners-btn {
+    flex-wrap: wrap;
+  }
+
+  .feedback__file__wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  .feedback__btn {
+    margin-left: 0;
+  }
+.slick-next,
+.slick-prev {
+  display: none;
+}
+.reviews__slider{
+  padding: 2px 15px;
+}
+
 }
 
 @media(max-height: 450px) {
@@ -399,9 +452,18 @@
   .screen {
     height: 450px;
   }
+
 }
 
+@media(max-width: 400px) {
+  .global__social-list {
+    margin-right: 30px;
 
+    &+.global__social-list {
+      margin-left: 0px;
+    }
+  }
+}
 
 @media(max-width: 380px) {
   .screen__title {
@@ -418,10 +480,13 @@
       margin-left: 0;
     }
   }
-  .reviews__slider{
-    padding: 5px 60px;
-  }
-  .reviews__item-wrapper{
-    padding: 15px 10px;
-  }
+
+  // .reviews__slider {
+  //   padding: 5px 60px;
+  // }
+
+  // .reviews__item-wrapper {
+  //   padding: 15px 10px;
+  // }
+
 }
